apps/arr-stack/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: arr-stack
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      nodeSelector:
        kubernetes.io/hostname: optiplex
      containers:
      - name: seerr
        image: ghcr.io/seerr-team/seerr:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: seerr-config
          mountPath: /config
      volumes:
      - name: seerr-config
        persistentVolumeClaim:
          claimName: seerr-config-pvc
