apps/arr-stack/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr-service
  namespace: arr-stack  
spec:
  type: ClusterIP
  selector:
    app: seerr
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
      name: http
